# adyen_terminal_api_cpp

./: CMakeLists.txt  POI.cpp  POI.h  README.md  base64.cpp  escapeJson.cpp  escapeJson.h  httpRequest.cpp  httpRequest.h  main.cpp  nexoCrypto.cpp  nexoCrypto.h  paymentRequest.cpp  paymentRequest.h  terminalRequest.cpp  terminalRequest.h
jsonExamples/: CancelRequest.json  CancelResponseFromPayment.json  DisplayHomeScreenRequest.json  DisplayHomeScreenResponse.json  DisplayQrCodeRequest.json  DisplayQrCodeResponse.json  DisplayVirtualReceiptRequest.json  DisplayVirtualReceiptResponse.json  PaymentReferencedRefundRequest.json  PaymentReferencedRefundResponse.json  PaymentSaleAlipayResponse.json  PaymentSaleCryptoRequest.json  PaymentSaleCryptoResponse.json  PaymentSaleDccResponse.json  PaymentSaleDccResponseShoperCancel.json  PaymentSaleRequest.json  PaymentSaleResponse.json  PaymentUnreferencedRefundRequest.json  PaymentUnreferencedRefundResponse.json
lib/jsoncpp/: CMakeLists.txt
